--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">TravelApp</string>
     <string name="fields_cannot_be_empty">Please enter a location!</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
